[gd_scene load_steps=11 format=3 uid="uid://bju4jxwr7a0pg"]

[ext_resource type="Script" uid="uid://e5vchwn4mqqe" path="res://scenes/main.gd" id="1_d36gk"]
[ext_resource type="PackedScene" uid="uid://bpkphu8qj137m" path="res://scenes/bg.tscn" id="1_qy3kl"]
[ext_resource type="PackedScene" uid="uid://b5pwnh1tmyrnl" path="res://scenes/ground.tscn" id="2_qu4oq"]
[ext_resource type="PackedScene" uid="uid://bhtein0chknfn" path="res://scenes/cubot.tscn" id="3_l41lx"]
[ext_resource type="PackedScene" uid="uid://lyf4a3sklk1o" path="res://scenes/GUI/hud.tscn" id="5_cgpie"]
[ext_resource type="PackedScene" uid="uid://lotwuige1aee" path="res://scenes/GUI/game_over.tscn" id="6_6n2u1"]
[ext_resource type="PackedScene" uid="uid://btgolia27owwb" path="res://codeediet.tscn" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://mpj18dwyvja6" path="res://scenes/cubot_corpse.tscn" id="8_tipki"]
[ext_resource type="Environment" uid="uid://da4vyspq77wu4" path="res://scenes/world.tres" id="9_85g3d"]

[sub_resource type="ViewportTexture" id="ViewportTexture_tipki"]
viewport_path = NodePath("SubViewport")

[node name="runner" type="Node" node_paths=PackedStringArray("cubot")]
process_mode = 1
script = ExtResource("1_d36gk")
cubot = NodePath("SubViewport/cubot")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(1152, 647)

[node name="Bg" parent="SubViewport" instance=ExtResource("1_qy3kl")]
layer = -1

[node name="Ground" parent="SubViewport" instance=ExtResource("2_qu4oq")]
visible = false

[node name="cubot" parent="SubViewport" node_paths=PackedStringArray("runner") instance=ExtResource("3_l41lx")]
modulate = Color(1.1, 1.1, 1.1, 1)
z_index = 53
position = Vector2(153, 516)
scale = Vector2(5, 5)
collision_mask = 16
runner = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="SubViewport/cubot"]
position = Vector2(84.6, -38.4)
scale = Vector2(0.2, 0.2)
limit_top = 1
drag_vertical_enabled = true
drag_top_margin = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="corpse" parent="SubViewport" instance=ExtResource("8_tipki")]
z_index = 53
position = Vector2(379, 279)
scale = Vector2(5, 5)

[node name="gameview" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="gameview"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_tipki")
expand_mode = 2
stretch_mode = 5

[node name="HUD" parent="gameview" instance=ExtResource("5_cgpie")]
layer = -1

[node name="HUD2" type="CanvasLayer" parent="."]
process_mode = 2
layer = -1
visible = false

[node name="Code_UI" parent="HUD2" node_paths=PackedStringArray("runner") instance=ExtResource("7_o6xl0")]
runner = NodePath("../..")

[node name="GameOver" parent="." instance=ExtResource("6_6n2u1")]
process_mode = 3

[node name="WorldEnvironment2" type="WorldEnvironment" parent="."]
environment = ExtResource("9_85g3d")

[node name="Timer" type="Timer" parent="."]
